--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ body {
     padding-top: 60px;
     background-image:
         linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-        url('header-background.jpg');
+        url('Header-Background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -939,3 +939,4 @@ footer {
     }
 
 }
+
